<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".UI.activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_header_bg_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_image_height">

            <ImageView
                android:id="@+id/iv_header_bg_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/auth_screens_background" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_settings_activity_setting"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/tv_title_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="@dimen/toolbar_title_paddingStart"
                    android:paddingEnd="0dp"
                    android:text="@string/title_settings"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/toolbar_title_text_size"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_user_image_setting"
            android:layout_width="@dimen/settings_user_image_size"
            android:layout_height="@dimen/settings_user_image_size"
            android:layout_below="@id/fl_header_bg_setting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_user_image_marginTop">

            <ImageView
                android:id="@+id/iv_user_photo_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/settings_user_picture_margin"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_user_placeholder" />
        </FrameLayout>

        <com.example.shopapp.utils.MSPTextView
            android:id="@+id/tv_edit_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_header_bg_setting"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
            android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
            android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
            android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
            android:text="@string/lbl_edit"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_edit_label_textSize" />

        <com.example.shopapp.utils.MSPTextViewBold
            android:id="@+id/tv_name_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_user_image_setting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_name_marginTop"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/settings_name_textSize"
            tools:text="Yousuf Almandhari" />

        <com.example.shopapp.utils.MSPTextView
            android:id="@+id/tv_gender_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name_setting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="Male" />

        <com.example.shopapp.utils.MSPTextView
            android:id="@+id/tv_email_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gender_setting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="yosif2015.m@gmail.com" />

        <com.example.shopapp.utils.MSPTextView
            android:id="@+id/tv_mobile_number_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email_setting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="3213243189" />

        <LinearLayout
            android:id="@+id/ll_address_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mobile_number_setting"
            android:layout_margin="@dimen/settings_address_margin"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/settings_address_padding">

            <com.example.shopapp.utils.MSPTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_lbl_addresses_margin"
                android:layout_weight="1"
                android:text="@string/lbl_addresses"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_lbl_addresses_textSize" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_vector_chevron_right" />

        </LinearLayout>

        <com.example.shopapp.utils.MSPButton
            android:id="@+id/btn_logout_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_address_setting"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/settings_button_marginStartEnd"
            android:layout_marginTop="@dimen/settings_button_marginTopBottom"
            android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
            android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize" />

    </RelativeLayout>
</ScrollView>